# TextureProvider

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  REFACTORING.md  SPECS.txt  docker-compose.yml
.github/workflows/: docker-publish.yml
.sqlx/: query-1675a17b2a683a1e9f7a1bbde65f6ace50a1bd434b64767be4e7ea1d4f228532.json  query-3a2a93ae97ff73a42645a55a1d7751f0a200e8e6c8be15aad771c31588ff2888.json  query-4cd46d26f6ba7f62d9b214a5d014bdadafc9784ad6ca5a06e1bdc27669dd7527.json  query-538e99016da991a0cab148f55045327644de92d6ca17a43d5f43a2a96b1a6aea.json  query-76b174bed21d29d62af76bb2fb2d4bbbaf871a19d2aff861724def95b1c4f2b8.json  query-9288769ceed6bd885f3123f071f1c7d15e0a48a845638e35ed2433339c077fb5.json  query-baf7179e6fec28836e6789dfa0f4777e09a4286351426a0a12eda7853e5c029e.json  query-bb52c296ee575f688627471b752d78f6332c050001ab329b22b7a9b3cb6da3df.json  query-be6f3e25189a770e9ef72b0e3841232706508cd06a397ea64b8a02b6c36a18bc.json  query-f99219a8964af3172e980b70c875da26c1e0acb2ed8a236607a28c7a6e130986.json
docs/: DOCKER_SETUP.md  REFACTORING.md  RETRIEVAL.md  SPECS.txt  USERNAME_ENDPOINTS.md
migrations/: 001_initial.sql  002_add_username_mapping.sql
src/: auth.rs  config.rs  handlers.rs  main.rs  models.rs  storage.rs
src/retrieval/: backend.rs  chain.rs  default_skin.rs  mod.rs  mojang.rs  storage_retriever.rs
src/storage/: backend.rs  local.rs  mod.rs  s3.rs
