[package]
name = "texture-provider2"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Authentication
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID handling
uuid = { version = "1", features = ["serde", "v4"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"

# S3 (optional)
aws-config = { version = "1.5", optional = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.42", optional = true }

# Environment variables
dotenvy = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Async traits
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Base64 encoding
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["s3"]
s3 = ["aws-config", "aws-sdk-s3"]
